MODBULKOPS-333 - Stage 2a - FQM Performance (FQL + identifiers): csv, mrc files converters moving, alignment (#414)